--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     </h3>
     <hr>
 
-    <img src="../Album Of My Photos/Images/2nd.jpg" alt="" width="600px" height="300px">
+    <img src="./Images/2nd.jpg" alt="" width="600px" height="300px">
     <img src="./Images/5th.jpg" alt="" width="360px">
 
     <img src="./Images/4th.jpg" alt="">
 
-    <img src="../Album Of My Photos/Images/1st.jpg" alt="">
+    <img src="./Images/1st.jpg" alt="">
 
-    <img src="../Album Of My Photos/Images/3rd.jpg" alt="">
+    <img src="./Images/3rd.jpg" alt="">
 
 </body>
 
